fixed spacing and styling

--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,15 @@
   font-weight: 400;
 
   color: rgba(255, 255, 255, 0.87);
-  background-color: #1976d2;
+  background-color: #fff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  overflow-x: hidden;
 }
 
 a {
